# PyBomb

./: .flake8  .gitignore  .pre-commit-config.yaml  .python-version  .travis.yml  LICENCE  LICENCE.txt  README.md  README.rst  dev_requirements.txt  mkdocs.yml  noxfile.py  old-setup.py  pyproject.toml  setup.cfg  setup.py
.github/workflows/: coverage.yml  release.yml  test-pypi.yml  tests.yml
docs/: Makefile  clients.rst  conf.py  gamesclient.rst  index.md  index.rst  modules.rst  pybomb.clients.rst  pybomb.rst  requirements.txt  response.rst
docs/api/: clients.rst  exceptions.rst  factory.rst  response.rst
docs/examples/: basic.md  games.md
docs/source/: conf.py  index.rst
docs/source/api/: clients.rst
docs/source/usage/: gameclient.rst  response.rst
docs/usage/: clients.rst  gameclient.rst  gamesclient.rst  platformsclient.rst
new-test/: test_game_client.py  test_games_client.py
pybomb/: __init__.py  clients.py  exceptions.py  response.py
pybomb/clients/: __init__.py  base_client.py  game_client.py  games_client.py
src/pybomb/: __init__.py  exceptions.py  factory.py  response.py
src/pybomb/clients/: __init__.py  base_client.py  client.py  game_client.py  games_client.py  platforms_client.py
src/pybomb/clients/base/: __init__.py  client.py  fetch_client.py  search_client.py
test/: test_response.py
test/test_clients/: test_game.py  test_games.py
tests/: __init__.py  game_client_test.py  games_client_test.py  response_test.py  test_factory.py  test_response.py
tests/test_clients/: __init__.py  conftest.py  fetch_clients.yml  helpers.py  search_clients.yml  test_fetch_client.py  test_game.py  test_games.py  test_games_client.py  test_platforms.py  test_search_clients.py
