[tool.poetry]
name = "pybomb"
version = "0.2.0"
description = "Simple clients for the Giant Bomb API."
authors = ["steveYeah <hutchinsteve@gmail.com>"]
license = "MIT"
readme="README.md"
homepage="https://github.com/steveYeah/PyBomb"
repository="https://github.com/steveYeah/PyBomb"
keywords=["giantbomb", "giant", "bomb", "game", "api", "client"]


[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.19.0"

[tool.poetry.dev-dependencies]
pytest = "^5.4.3"
flake8 = "^3.8.3"
sphinx = "^3.1.2"
mock = "^2.0.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
